--- a/content/classes/02-data-report/01-intro-to-R/level-2/index.html
+++ b/content/classes/02-data-report/01-intro-to-R/level-2/index.html
@@ -7,6 +7,7 @@ slug: []
 categories: []
 tags: []
 draft: no
+quiz: https://classroom.google.com/c/NDg3ODE3MzU4NzEw/a/NTI0ODY4Nzc3NjQw/details
 ---
 
 <script src="{{< blogdown/postref >}}index_files/header-attrs/header-attrs.js"></script>
@@ -120,4 +121,5 @@ library(ggplot2)</code></pre>
 <li>Makes at least one plot with relevant axes and an appropriate geoms</li>
 <li>Has comments that describe what each section of code is doing</li>
 </ul>
+<p>I can come see this on your computer or you can zip the project folder and submit to the assignment on Google Classroom below.</p>
 </div>
