--- a/content/classes/03-poster/02-poster-text/_index.html
+++ b/content/classes/03-poster/02-poster-text/_index.html
@@ -1,7 +1,7 @@
 ---
 title: "Composing Text"
 weight: 2
-draft: true
+draft: false
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
