--- a/content/classes/03-poster/02-poster-text/level-1/index.html
+++ b/content/classes/03-poster/02-poster-text/level-1/index.html
@@ -1,5 +1,5 @@
 ---
-title: "Effective Teams"
+title: "Poster Structure"
 author: Ben Harden
 date: '2021-05-05'
 level: 1
@@ -12,22 +12,11 @@ draft: no
 <script src="{{< blogdown/postref >}}index_files/header-attrs/header-attrs.js"></script>
 
 
-<p>We crowd sourced a good amount of this level content as a class including setting up some basic criteria for the creation of a successful team.</p>
-<p>What came to the surface through this exercise is that a team is successful if they can work together effectively to reach a common goal. This goal is typically not achievable by any one individual alone.</p>
-<p>Some features of successful teams that we discussed:</p>
-<ul>
-<li><p>Strong communication strategies including clear expectations, etiquette, and ability to resolve conflicts constructively</p></li>
-<li><p>Distinct roles such that everyone knows what part they play and can take ownership and have buy-in.</p></li>
-<li><p>Equitable division of labor: Fair is not always equal, but everyone should feel they are contributing what they can and taking an equitable burden.</p></li>
-<li><p>A clear plan. Knowing your goal is one this, but success in reaching it usually requires a clear plan and a system to both enact the plan and make decisions should the plan not work as effectively as they had hoped.</p></li>
-</ul>
-<p>Specifically in the science world, we call this teamwork collaboration. We will learn something of the ethics of collaboration at the WHOI Ethics Seminar on June 23, but here are a couple of other reflections on effective collaboration:</p>
-<ul>
-<li><a href="https://www.science.org/content/article/how-collaborate">How to Collaborate</a> by Sharon Ann Holgate</li>
-<li><a href="https://www.nature.com/articles/d41586-021-01795-1">Meaningful collaborations can end “helicopter research”</a> by Fernanda Adame</li>
-<li><a href="https://www.nature.com/articles/d41586-021-01573-z">“We need to talk”: ways to prevent collaborations breaking down</a> by Virginia Gewin</li>
-</ul>
-<p>And one article here talking more about what it takes to be a positive leader in science:</p>
-<ul>
-<li><a href="https://www.scientificamerican.com/article/how-to-be-a-great-leader-in-science/">How to Be a Great Leader in Science</a> by Alison L. Antes</li>
-</ul>
+<p>In this section, we are going to be thinking about the text content of the research poster. As such, the end product will be the text that ends up on your poster.</p>
+<p>Posters are an important communication tool wherein the results of your research are presented in a clear, concise and visually appealing manner. On many occasions, you will be standing next to your poster describe your results to any interested researchers, but your work also needs to be understandable to someone who is reading it without your presence - this becomes increasingly important as conferences archive posters online.</p>
+<p>Let’s start by thinking a little about what kinds of things you are going to want to present in your poster. It’s the culmination of your research project so you really want to get some clear results across. Like with research papers though, you also need enough context for someone to understand why and how you did the work so the results make sense.</p>
+<p>Many posters are organized like a traditional research paper with sections for Introduction, Methods, Results and Discussion. This is a fine way to do things and if you’ve not created a research poster before then it’s a good way to go. There are other options too though and we will cover these in L3.</p>
+<p>Other than poster structure, the other question is how much text to use. The temptation is to fill as much of the poster as you can - the more information the better right?! But it is often better to give the poster more room to breathe and focus the reader’s limited attention on a few main points. Some posters use bullet points for this reason and that’s a fine way to go.</p>
+<p>Below is an article which gives a variety of opinions on poster structures:</p>
+<p><a href="https://www.science.org/content/article/how-prepare-scientific-poster" class="uri">https://www.science.org/content/article/how-prepare-scientific-poster</a></p>
+<p>We’ll also be looking at some <a href="../../03-poster/level-1/">example posters</a> that will help us see examples of possible structures and amount of text.</p>
