--- a/content/classes/03-poster/02-poster-text/level-2/index.html
+++ b/content/classes/03-poster/02-poster-text/level-2/index.html
@@ -1,5 +1,5 @@
 ---
-title: "Teamwork Contract"
+title: "Poster Text"
 author: Ben Harden
 date: '2022-05-05'
 level: 2
@@ -7,12 +7,20 @@ slug: []
 categories: []
 tags: []
 draft: no
-quiz: https://classroom.google.com/c/NDg3ODE3MzU4NzEw/a/MzYzODM4NDEwNjMy/details
+quiz: https://classroom.google.com/c/NDg3ODE3MzU4NzEw/a/NTM1MjIwNDQ5NzEw/details
 ---
 
 <script src="{{< blogdown/postref >}}index_files/header-attrs/header-attrs.js"></script>
 
 
-<p>Now that we’ve thought a little about effective teams and collaborators, we are going to draft a teamwork agreement for your class projects. This will be a document that will outline how your team will function and should cover the basics of your anticipated roles, communication strategy, and decision-making systems.</p>
-<p>How this looks is up to your team. You should draft a document and submit it to the assignment below. Once you’ve done that I will review it and get back to you with any questions I have. Once you’ve answered these questions clearly then we will sign the document as our initial agreement for how the team will operate.</p>
-<p>We will review this mid-class to edit and recommit to the terms you have defined as we get to know each other better and the team irons out some of it’s operations.</p>
+<p>Now that we’ve seen some options for sections and text that can be used in your poster, you and your team should make some decisions about what you are going to present and in what format.</p>
+<p>From your data report, you will have a selection of figures and results. You should look through this together and pick the three (or so) most relevant or interesting results that you want to emphasize in your poster. These results will form the major thrust of the poster so we need to make sure that the figures and text we use all work to support communicating these outcomes.</p>
+<p>Once you’ve decided on your main results, you should begin thinking about the text and figures that you are going to use. Some of this can be lifted right from your data report, but you will need to cover the information that traditionally goes in the four section so of a research paper:</p>
+<ul>
+<li>Introduction: Basic background information and motivation</li>
+<li>Methods: Briefly how we collected the data</li>
+<li>Results: What we found and what it means</li>
+<li>Discussion: Any conclusions and/or possible further work</li>
+</ul>
+<p>Your goal at this level is to produce a team document that is a first draft of the text and figures that are going to go into your poster. Think of it as a polished version of your data report with an eye to the information and structure needed in the research poster.</p>
+<p>One final requirement - you really don’t have much space for words on a poster so you should limit yourself to 500 words maximum. You will probably find you will even need to scale it down from there as you put the words into your final poster.</p>
