--- a/content/classes/03-poster/03-poster/_index.html
+++ b/content/classes/03-poster/03-poster/_index.html
@@ -1,7 +1,7 @@
 ---
 title: "Poster Presentation"
 weight: 4
-draft: true
+draft: false
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
