--- a/content/classes/03-poster/03-poster/level-3/index.html
+++ b/content/classes/03-poster/03-poster/level-3/index.html
@@ -16,8 +16,8 @@ quiz: https://classroom.google.com/c/NDg3ODE3MzU4NzEw/a/NTM1MzMwOTY0MzY5/details
 <p>If you are aiming for Level 3 at advanced poster design, the you goal is to move from “yeah, that’ll do”, to “Wow, that’s really crisp”. As such my main criteria for determining whether you have reached this goal will be a close scrutiny of your poster elements to make sure that they really are consistent and appropriate.</p>
 <p>I will not be looking at content, only at design. I’ll be mainly looking at:</p>
 <ul>
-<li>How well your images are displayed - are they cropped and aligned well?</li>
-<li>What colors you used and whether there is consistency throughout your poster</li>
+<li>How well your images/figures are displayed - are they cropped and aligned well?</li>
+<li>What colors you used and whether there is consistency and contrast throughout your poster</li>
 <li>Whether the fonts are consistent and appropriate and if text boxes are well-aligned</li>
 <li>The balance of white space in the poster and other spacing</li>
 </ul>
