update cruise data

--- a/content/cruise_data/index.html
+++ b/content/cruise_data/index.html
@@ -125,6 +125,10 @@ draft: no
 <p>Columns are:</p>
 <ul>
 <li>station: Station number for the cruise</li>
+<li>density: Surface Ocean Density (km/m3)</li>
+<li>chla: Surface extracted chla content (mg/L)</li>
+<li>po4: Phosphate Concentration (uMol)</li>
+<li>pH: Ocean pH</li>
 <li>dttm_in: Date and time net went in</li>
 <li>dttm_out: Date and time net came out</li>
 <li>lon: Longitude (decimal degrees east of 0)</li>
