--- a/content/classes/03-poster/03-poster/level-1/index.html
+++ b/content/classes/03-poster/03-poster/level-1/index.html
@@ -28,10 +28,19 @@ draft: no
 <li><a href="posters/poster4.jpg">Poster 4</a></li>
 <li><a href="posters/poster5.pdf">Poster 5</a></li>
 </ul>
-<p>We will assign these posters in class to small goroiup discussions where we will think about:</p>
+<p>We will assign these posters in class to small group discussions where we will think about:</p>
 <ul>
 <li>What is the audience for this poster?</li>
 <li>How easy was it to get the general message? Why?</li>
 <li>What design elements were effective?</li>
 <li>What design elements were ineffective?</li>
+</ul>
+<p>FYI - here are a selection of previous PEP posters:</p>
+<ul>
+<li><a href="pep_posters/currents.pdf">Ocean Currents</a></li>
+<li><a href="pep_posters/geology.pdf">Geology</a></li>
+<li><a href="pep_posters/nutrients.pdf">Nutrients</a></li>
+<li><a href="pep_posters/phytoplankton.pdf">Phytoplankton</a></li>
+<li><a href="pep_posters/temp_sal.pdf">Temperature and Salinity</a></li>
+<li><a href="pep_posters/zooplankton.pdf">Zooplankton</a></li>
 </ul>
