--- a/content/classes/03-poster/01-data-design/level-2/index.html
+++ b/content/classes/03-poster/01-data-design/level-2/index.html
@@ -19,7 +19,7 @@ quiz: https://classroom.google.com/c/NDg3ODE3MzU4NzEw/a/NTI1MDIyMjM0MzU3/details
 <div id="exercise" class="section level2">
 <h2>Exercise</h2>
 <p>Once you’ve familiarized yourself with the information in the primer above, you should apply these tools to one of your visualizations.</p>
-<p>Pick a figure you have made in R and improve it by showing me <strong>three</strong> design tools in actions. This could be:</p>
+<p>Pick a figure you have made in R and improve it by showing me at least <strong>two</strong> design tools in actions. This could be:</p>
 <ul>
 <li>Adding a theme</li>
 <li>Adding labels or annotations</li>
