add design tools

--- a/content/classes/03-poster/01-data-design/level-2/index.html
+++ b/content/classes/03-poster/01-data-design/level-2/index.html
@@ -32,6 +32,6 @@ quiz: https://classroom.google.com/c/NDg3ODE3MzU4NzEw/a/NTI1MDIyMjM0MzU3/details
 <ul>
 <li>Your script</li>
 <li>Your figure (can take screen shot or use ggsave() function)</li>
-<li>A brief description of the three changes you made and why you think this improves the design of your figure in relation to what you read in level 1.</li>
+<li>A brief description of the changes you made and why you think this improves the design of your figure in relation to what you read in level 1.</li>
 </ul>
 </div>
